[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/Level 1/Stage4.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level 1/PathFollow2D.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Enemy1/Enemy1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Enemy2/Enemy2.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 126.675, 128.71, 0, 0, 0, 0, 124.403, 964.838, 0, 0, 0, 0, 124.403, 126.438, 0, 0, 0, 0, 126.675, 128.71 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1594.44, 519.509, 0, 0, 0, 0, 322.075, 517.237, 0, 0, 0, 0, 1595.81, 519.421 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1794.39, 128.71, 0, 0, 0, 0, 1789.84, 962.566, 0, 0, 0, 0, 1793.11, 128.874 )
}

[node name="Stage4" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="." index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]

position = Vector2( 126.675, 128.71 )
rotation = 1.57351
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy1" parent="Path2D/PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="Path2D3" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D3" index="0"]

position = Vector2( 1594.44, 519.509 )
rotation = -3.13982
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy2" parent="Path2D3/PathFollow2D" index="0" instance=ExtResource( 4 )]

[node name="Path2D2" type="Path2D" parent="." index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2" index="0"]

position = Vector2( 1789.86, 958.515 )
rotation = -1.56834
offset = 829.988
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy3" parent="Path2D2/PathFollow2D" index="0" instance=ExtResource( 3 )]

[connection signal="died" from="Path2D/PathFollow2D/Enemy1" to="." method="_on_Enemy1_died"]

[connection signal="died" from="Path2D3/PathFollow2D/Enemy2" to="." method="_on_Enemy2_died"]

[connection signal="died" from="Path2D2/PathFollow2D/Enemy3" to="." method="_on_Enemy3_died"]


